--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
+displayName=Autoblocks Timers
+author=dappermickie
+description=Timers for the Autoblocks returns
 tags=
-plugins=com.example.ExamplePlugin
+plugins=com.github.dappermickie.autoblocks.timers.AutoblocksTimersPlugin
